# aml-acuity-ovxlib

./: CMakeLists.txt  README.md  ovxlib.pc.in
packaging/: aml-acuity-ovxlib.spec
